--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "lcinterface",
-  "version": "2.1.1",
+  "version": "2.1.2",
   "description": "",
-  "main": "examples/index.js",
+  "main": "index.js",
   "scripts": {
     "start": "node --no-warnings .",
     "test": "node ."
