--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "types": "types.d.ts",
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "node-fetch": "^2.6.1"
   },
